--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "final-form": "^4.20.2",
+    "final-form-material-ui": "^0.3.0",
     "google-map-react": "^2.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-final-form": "^6.5.3",
+    "react-material-final-form": "^1.0.24",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
