--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-final-form": "^6.5.3",
     "react-material-final-form": "^1.0.24",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
