--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-material-final-form": "^1.0.24",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.2",
+    "react-spring": "^9.2.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
