--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^17.0.2",
     "react-final-form": "^6.5.3",
     "react-material-final-form": "^1.0.24",
+    "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.2",
     "react-spring": "^9.2.4",
